istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - nek50979.live.dynatrace.com
  - sg-eu-west-1-52-19-55-101-prod13-ireland.live.ruxit.com
  - sg-eu-west-1-34-241-73-250-prod13-ireland.live.ruxit.com
  - sg-eu-west-1-54-77-219-214-prod13-ireland.live.ruxit.com 
  - sg-eu-west-1-34-242-17-158-prod13-ireland.live.ruxit.com 
  - sg-eu-west-1-34-248-26-181-prod13-ireland.live.ruxit.com 
  - sg-eu-west-1-52-31-60-170-prod13-ireland.live.ruxit.com
  - sg-eu-west-1-52-19-113-184-prod13-ireland.live.ruxit.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - nek50979.live.dynatrace.com
  - sg-eu-west-1-52-19-55-101-prod13-ireland.live.ruxit.com
  - sg-eu-west-1-34-241-73-250-prod13-ireland.live.ruxit.com
  - sg-eu-west-1-54-77-219-214-prod13-ireland.live.ruxit.com 
  - sg-eu-west-1-34-242-17-158-prod13-ireland.live.ruxit.com 
  - sg-eu-west-1-34-248-26-181-prod13-ireland.live.ruxit.com 
  - sg-eu-west-1-52-31-60-170-prod13-ireland.live.ruxit.com
  - sg-eu-west-1-52-19-113-184-prod13-ireland.live.ruxit.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - nek50979.live.dynatrace.com
    route:
    - destination:
        host: nek50979.live.dynatrace.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-52-19-55-101-prod13-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-52-19-55-101-prod13-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-34-241-73-250-prod13-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-34-241-73-250-prod13-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-54-77-219-214-prod13-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-54-77-219-214-prod13-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-34-242-17-158-prod13-ireland.live.ruxit.com 
    route:
    - destination:
        host: sg-eu-west-1-34-242-17-158-prod13-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      -  sg-eu-west-1-34-248-26-181-prod13-ireland.live.ruxit.com 
    route:
    - destination:
        host: sg-eu-west-1-34-248-26-181-prod13-ireland.live.ruxit.com 
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      -  sg-eu-west-1-52-31-60-170-prod13-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-52-31-60-170-prod13-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      -  sg-eu-west-1-52-19-113-184-prod13-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-52-19-113-184-prod13-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
